--- a/Lorensjon/project.properties
+++ b/Lorensjon/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=..\\..\\Desktop\\pakerfeldt-android-viewflow-a7936b0\\pakerfeldt-android-viewflow-a7936b0\\viewflow
-android.library.reference.2=../../Desktop/actionbar
+android.library.reference.1=../actionbar
+android.library.reference.2=../viewflow
